--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,11 +1,10 @@
-<div id="navbar" class=""> {{ $currentpage := . }}
-    <ul class="frl">
-        {{- range .Site.Menus.main }}
-        {{- if or ($currentpage.IsMenuCurrent "main" .) ($currentpage.HasMenuCurrent "main" .)}}
-        <li class="navitem"><a href="{{ .URL }}" class="lb plr1 navlink active">{{ .Title }}</a></li>
-        {{- else }}
-        <li class="navitem"><a href="{{ .URL }}" class="lb plr1 navlink">{{ .Title }}</a></li>
-        {{- end }}
-        {{- end }}
-    </ul>
+{{- $currentpage := . -}}
+{{- range .Site.Menus.main }}
+<div class="nav-item menutoggle">
+{{- if or ($currentpage.IsMenuCurrent "main" .) ($currentpage.HasMenuCurrent "main" .)}}
+<a href="{{ .URL }}" class="nav-link block active">{{ .Title }}</a>
+{{- else }}
+<a href="{{ .URL }}" class="nav-link block">{{ .Title }}</a>
+{{- end }}
 </div>
+{{- end }}
