--- a/layouts/partials/sociallinks.html
+++ b/layouts/partials/sociallinks.html
@@ -1,8 +1,8 @@
 <h2>My Social Links</h2>
 <ul class="sl">
-<li><a href="https://www.github.com/dbob16" target="_blank" rel="noopener noreferrer me"><img src="/pics/sociallist/github.webp" alt="GitHub Spider Icon"></a></li>
-<li><a href="https://allthingstech.social/@dgilluly" target="_blank" rel="noopener noreferrer me"><img src="/pics/sociallist/mastodon.webp" alt="Mastodon Elephant Icon"></a></li>
-<li><a href="https://www.last.fm/user/dgilluly" target="_blank" rel="noopener noreferrer me"><img src="/pics/sociallist/lastfm.jpg" alt="Last.fm red rounded square icon"></a></li>
-<li><a href="https://dilangilluly.substack.com/" target="_blank" rel="noopener noreferrer me"><img src="/pics/sociallist/substack.webp" alt="Substack bookmark icon"></a></li>
-<li><a href="https://www.facebook.com/dgilluly" target="_blank" rel="noopener noreferrer me"><img src="/pics/sociallist/facebook.webp" alt="Facebook blue circle 'f' icon"></a></li>
+<li><a href="https://www.github.com/dbob16" target="_blank" rel="noopener noreferrer me"><img src="{{ .Site.BaseURL }}pics/sociallist/github.webp" alt="GitHub Spider Icon"></a></li>
+<li><a href="https://allthingstech.social/@dgilluly" target="_blank" rel="noopener noreferrer me"><img src="{{ .Site.BaseURL }}pics/sociallist/mastodon.webp" alt="Mastodon Elephant Icon"></a></li>
+<li><a href="https://www.last.fm/user/dgilluly" target="_blank" rel="noopener noreferrer me"><img src="{{ .Site.BaseURL }}pics/sociallist/lastfm.jpg" alt="Last.fm red rounded square icon"></a></li>
+<li><a href="https://dilangilluly.substack.com/" target="_blank" rel="noopener noreferrer me"><img src="{{ .Site.BaseURL }}pics/sociallist/substack.webp" alt="Substack bookmark icon"></a></li>
+<li><a href="https://www.facebook.com/dgilluly" target="_blank" rel="noopener noreferrer me"><img src="{{ .Site.BaseURL }}pics/sociallist/facebook.webp" alt="Facebook blue circle 'f' icon"></a></li>
 </ul>
