--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,9 +1,13 @@
 {{- define "pagetitle" }}Error 404: Page not Found | {{ .Site.Title }}{{- end }}
 
 {{- define "main" }}
-<div id="error404" class="p1 rf hc mb1">
-    <h1>Error 404 - Page Not Found</h1>
-    <p>The page `<span id="pathtext">filler</span>` was not found. Please check the path and try again. It may have been deleted or you have remembered it incorrectly.</p>
-    <script type="text/javascript">document.getElementById("pathtext").innerText = window.location.pathname</script>
+<div id="contentbody">
+<h1>Error 404 - Page not found</h1>
+<p>The page at <em><span id="pagepath"></span></em> was not found. Please check to make sure that was the page you were trying to reach.</p>
+<p><a href="{{ .Site.BaseURL }}">Return to home</a>.</p>
 </div>
+<script>
+const spanpagepath = document.getElementById("pagepath")
+spanpagepath.innerText = window.location.pathname
+</script>
 {{- end }}
