--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,11 +1,11 @@
 {{- define "main" }}
-<div id="main" class="hc p1 rf mb1">
-    <main>
-        <h1>{{ .Title }}</h1>
-        {{ .Content }}
-        {{- if .Date }}
-        <p>Last Modified: {{ .Date.Format "Monday, January 2, 2006 at 3:04PM"}}</p>
-        {{- end }}
-    </main>
+<div id="contentbody">
+<main>
+<h1>{{ .Title }}</h1>
+{{ .Content }}
+{{- if .Lastmod }}
+<p>Last modified: {{ .Lastmod.Format "Jan 02, 2006 at 03:04PM" }}</p>
+{{- end }}
+</main>
 </div>
 {{- end }}
