--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -1,23 +1,19 @@
 {{- define "main" }}
-<div id="main" class="hc p1 db">
-    <main>
-        <article>
-        <h1>{{ .Title }}</h1>
-        {{- if .Date }}
-        <p>Posted: {{ .Date.Format "Monday, January 2, 2006 at 3:04PM"}}</p>
-        {{- end }}
-        <div class="rf">
-            {{ .Content }}
-        </div>
-        </article>
-    </main>
+<div id="contentbody">
+<h1>{{ .Title }}</h1>
+<p><em>{{ .Date.Format "Jan 02, 2006 at 03:04PM" }}</em></p>
+{{ .Content }}
 </div>
-<div id="paginator" class="db mtb1">
-    {{- with .NextInSection }}
-    <a href="{{ .Permalink }}" class="lb pg-l mw45">< Next<br>{{ .Title }}</a>
-    {{- end }}
-    {{- with .PrevInSection }}
-    <a href="{{ .Permalink }}" class="lb pg-r mw45">Prev ><br>{{ .Title }}</a>
-    {{- end }}
+<div id="paginator">
+<div id="nextbutton">
+{{- with .NextInSection }}
+<a href="{{ .RelPermalink }}" class="block whitelink">< Next<br>{{ .Title }}</a>
+{{- end }}
+</div>
+<div id="prevbutton">
+{{- with .PrevInSection }}
+<a href="{{ .RelPermalink }}" class="block whitelink">Prev ><br>{{ .Title }}</a>
+{{- end }}
+</div>
 </div>
 {{- end }}
