--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,203 +1,220 @@
+/* Clear regular formatting */
 * {
-    margin: 0;
     padding: 0;
+    margin: 0;
 }
 
-body {
-    background-color: #000000;
-    color: #ffffff;
-    min-width: 380px;
+/* Set defaults */
+html {
     max-width: 1200px;
-    padding: 1rem;
-    margin: 2rem auto;
-    font-family: "Fira Sans", sans-serif;
-    font-weight: 400;
-    font-size: 14pt;
-    margin-bottom: 20rem;
+    min-width: 330px;
+    margin: 10px auto;
+    padding: 10px;
+    background-color: #000;
+    color: #fff;
+    font-size: 16pt;
 }
 
 a {
-    color: #5050ff;
     text-decoration: none;
-    transition: all ease 1s;
+    color: #77f;
+    transition: all ease 0.75s;
 }
 
 a:hover {
-    color: #ff5050
+    color: #f77;
 }
 
-/* IDs */
-
-#navbar {
-    margin: 1rem 0.25rem;
+a.whitelink {
+    color: #fff;
 }
 
-/* Classes */
-
-.pt1 {
-    padding-top: 1rem;
+a.whitelink:hover {
+    color: #f77;
 }
 
-.p05 {
-    padding: 0.5rem;
-}
-
-.p075 {
-    padding: 0.75rem;
-}
-
-.p1 {
-    padding: 1rem;
-}
-
-.mb1 {
-    margin-bottom: 1rem;
-}
-
-.mtb1 {
-    margin: 1rem 0;
-}
-
-.mw45 {
-    max-width: 45%;
-}
-
-.w100 {
-    width: 100%;
+.block {
+    display: block;
 }
 
 .flex {
     display: flex;
-    flex-direction: column;
-    gap: 1rem;
 }
 
-.db {
-    display: block;
-    overflow: auto;
-}
-
-.thumb {
-    max-height: 5rem;
-}
-
-.hc {
-    background-color: #44444488;
-    border-radius: 1rem;
-}
-
-.fcl {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    list-style: none;
-    align-items: center;
-    width: 100%;
-}
-
-.frl {
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-    list-style: none;
-    /* margin-right: 0.25rem; */
-}
-
-.gr60-40 {
+.g2 {
     display: grid;
     grid-template-columns: 1fr;
-    gap: 1rem;
 }
 
-.lb {
-    background-color: #44444488;
-    color: #9090ff;
+/* Header Section */
+#header {
+    background-color: #222;
+    padding: 15px;
+    margin: 10px 0;
+    border-radius: 10px;
+}
+
+#header a {
+    flex-direction: column;
+    justify-content: center;
     text-align: center;
-    padding: 0.5rem;
-    border-radius: 0.25rem;
-    transition: all ease 1s;
-    display: block;
+    gap: 15px;
+    color: #fff;
 }
 
-.lb.active {
-    background-color: #77444488;
+#header a img {
+    width: 150px;
+    max-width: 90%;
 }
 
-.lb:hover {
-    color: #9090ff;
-    background-color: #44777788;
+/* Navbar Section */
+#menubutton {
+    margin: 10px 0;
+    text-align: center;
 }
 
-.rf {
+#menubutton-link {
+    padding: 15px;
+    border-radius: 10px;
+    color: #fff;
+    background-color: #222;
+}
+
+#navbar {
+    margin: 10px 0;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    gap: 10px;
+}
+
+#navbar a.nav-link {
+    padding: 15px;
+    border-radius: 10px;
+    color: #fff;
+    background-color: #222;
+    transition: all ease 0.7s;
+}
+
+#navbar a.nav-link.active {
+    background-color: #722;
+}
+
+#navbar a.nav-link:hover {
+    background-color: #227;
+}
+
+/* Body Section */
+#contentbody {
+    background-color: #222;
+    padding: 15px;
+    border-radius: 10px;
+
+    h1, h2, h3, h4, h5, h6 {
+        display: block;
+        padding: 10px 0;
+    }
+
     p {
-        padding: 0.5rem 0 0.25rem 0
+        padding-bottom: 6px;
     }
 
     ul, ol {
-        margin: 0.5rem 0 0.25rem 1.5rem
-    }
-
-    h1, h2, h3, h4, h5, h6 {
-        margin: 0.5rem 0;
+        margin: 7px 0;
+        margin-left: 30px;
+        ul, ol {
+            margin: 0;
+            margin-left: 30px;
+        }
     }
 
     img {
-        max-width: 85%;
         display: block;
-        margin: 0.5rem auto;
+        margin: 10px auto;
+        max-width: 95%;
+        max-height: 95vh;
     }
 
-    blockquote {
-        margin-left: 1.5rem;
-        padding-left: 1rem;
-        border-left: solid #00000055 0.75rem;
+    code {
+        display: inline-block;
+        border: solid 1px #fff;
+        padding: 5px;
+        margin: 2px;
+        max-width: 97%;
+        overflow-x: scroll;
+    }
+
+    iframe {
+        display: block;
+        margin: 10px auto;
+        width: 90%;
+        aspect-ratio: 16 / 9;
+        max-height: 80vh;
     }
 }
 
-.sl {
-    list-style: none;
+/* Page List */
+#pagelist {
+    margin: 10px 0;
+    flex-direction: column;
+}
+
+#pagelist .page-item {
+    margin: 10px 0;
+    background-color: #222;
+    padding: 15px;
+    border-radius: 10px;
+}
+
+/* Paginator */
+#paginator {
+    margin: 10px 0;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 1rem;
-    margin: 1rem 0 0.75rem 0;
-    img {
-        max-width: 4rem;
-    }
+    flex-direction: column;
+    gap: 10px;
 }
 
-.pg-l {
-    float: left;
+#paginator a {
+    background-color: #222;
+    padding: 15px;
+    border-radius: 10px;
 }
 
-.pg-r {
-    float: right;
-}
-
-.tac {
+/* Footer Section */
+#footer {
     text-align: center;
+    margin: 10px 0;
+    margin-bottom: 200px;
+    p {
+        padding: 5px 0;
+    }
 }
 
-@media (min-width: 800px) {
-    .flex {
+#footer #footermenu {
+    margin: 10px;
+    flex-direction: column;
+    gap: 10px;
+    justify-content: center;
+}
+
+@media (min-width: 700px) {
+    .g2 {
+        grid-template-columns: 1fr 1fr;
+        gap: 15px;
+    }
+    #navbar {
         flex-direction: row;
-        align-items: center;
         flex-wrap: wrap;
+        justify-content: left;
     }
 
-    .lb {
-        padding: 0.75rem 1rem;
-    }
-
-    .frl {
+    #paginator {
         flex-direction: row;
-        align-items: center;
-        flex-wrap: wrap;
-        gap: 0.75rem;
-        margin: 0.75rem 0;
+        justify-content: space-between;
     }
 
-    .gr60-40 {
-        grid-template-columns: 6fr 4fr;
+    #footer #footermenu {
+        flex-direction: row;
+        flex-wrap: wrap;
     }
 }
