--- a/static/css/main.css
+++ b/static/css/main.css
@@ -56,6 +56,7 @@ a.whitelink:hover {
 
 #header a {
     flex-direction: column;
+    align-items: center;
     justify-content: center;
     text-align: center;
     gap: 15px;
@@ -63,6 +64,7 @@ a.whitelink:hover {
 }
 
 #header a img {
+    border-radius: 5px;
     width: 150px;
     max-width: 90%;
 }
@@ -202,6 +204,13 @@ a.whitelink:hover {
         grid-template-columns: 1fr 1fr;
         gap: 15px;
     }
+
+    #header a {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: left;
+    }
+
     #navbar {
         flex-direction: row;
         flex-wrap: wrap;
