Summary breaks and index title

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,4 +1,4 @@
-{{- define "pagetitle" }}{{ .Site.Title }}{{- end }}
+{{- define "title" }}{{ .Site.Title }}{{- end }}
 
 {{- define "main" }}
 <div id="contentbody">
