--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="{{ .Summary }}">
 <title>{{- block "title" . }}{{ .Title }} | {{ .Site.Title }}{{- end }}</title>
 <link rel="stylesheet" href="{{ .Site.BaseURL }}css/main.css">
 <link rel="shortcut icon" href="{{ .Site.BaseURL }}favicon.jpg" type="image/x-icon">
