--- a/static/css/main.css
+++ b/static/css/main.css
@@ -166,6 +166,19 @@ a.whitelink:hover {
     background-color: #222;
     padding: 15px;
     border-radius: 10px;
+
+    p {
+        padding-bottom: 6px;
+    }
+
+    ul, ol {
+        margin: 7px 0;
+        margin-left: 30px;
+        ul, ol {
+            margin: 0;
+            margin-left: 30px;
+        }
+    }
 }
 
 /* Paginator */
