Added comments, enabled on some posts

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -21,6 +21,9 @@
 This is where the page content will go.
 {{- end }}
 </div>
+<div id="comments">
+{{- partial "giscus.html" . }}
+</div>
 <div id="footer">
 {{- partial "footer.html" . }}
 </div>
