--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -155,6 +155,26 @@ a.whitelink:hover {
     }
 }
 
+#contentbody .sociallinks a img {
+    margin: 0;
+    display: inline;
+    max-height: 40px;
+}
+
+#contentbody .sociallinks a {
+    margin: 10px 0;
+    padding: 6px;
+    display: flex;
+    text-align: center;
+    gap: 5px;
+    color: #fff;
+    background-color: #00f9;
+    border: solid 1px #fff;
+    border-radius: 10px;
+    flex-direction: column;
+    align-items: center;
+}
+
 /* Page List */
 #pagelist {
     margin: 10px 0;
@@ -228,6 +248,15 @@ a.whitelink:hover {
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: left;
+    }
+
+    #contentbody .sociallinks a {
+        flex-direction: row;
+        justify-content: center;
+    }
+
+    #contentbody .sociallinks a img {
+        margin: 0;
     }
 
     #paginator {
