--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,8 +5,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="{{ .Summary }}">
 <title>{{- block "title" . }}{{ .Title }} | {{ .Site.Title }}{{- end }}</title>
-<link rel="stylesheet" href="{{ .Site.BaseURL }}css/main.css">
+{{- $style := resources.Get "css/main.css" | fingerprint }}
+<link rel="stylesheet" href="{{ $style.Permalink }}">
 <link rel="shortcut icon" href="{{ .Site.BaseURL }}favicon.jpg" type="image/x-icon">
+{{- $scripts := resources.Get "js/scripts.js" | fingerprint }}
+<script src="{{ $scripts.Permalink }}"></script>
 </head>
 <body onload="setResponse()">
 <div id="header">
@@ -27,7 +30,5 @@ This is where the page content will go.
 <div id="footer">
 {{- partial "footer.html" . }}
 </div>
-<script src="{{ .Site.BaseURL }}js/scripts.js">
-</script>
 </body>
 </html>
