--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -177,12 +177,15 @@ a.whitelink:hover {
 
 /* Page List */
 #pagelist {
-    margin: 10px 0;
+    margin: 15px 0;
     flex-direction: column;
 }
 
+#pagelist.flex {
+    gap: 15px;
+}
+
 #pagelist .page-item {
-    margin: 10px 0;
     background-color: #222;
     padding: 15px;
     border-radius: 10px;
