--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -6,7 +6,7 @@
 <p>Last modified: {{ .Date.Format "Jan 02, 2006 at 03:04PM" }}</p>
 {{- end }}
 </div>
-<div id="pagelist">
+<div id="pagelist" class="flex">
 {{- range .Paginator.Pages }}
 <div class="page-item">
 <a href="{{ .Permalink }}" class="block">{{ .Title }}</a>
