--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -44,6 +44,8 @@ a.whitelink:hover {
 .g2 {
     display: grid;
     grid-template-columns: 1fr;
+    gap: 15px;
+    text-align: center;
 }
 
 /* Header Section */
