--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -155,6 +155,11 @@ a.whitelink:hover {
         aspect-ratio: 16 / 9;
         max-height: 80vh;
     }
+
+    iframe.webapp {
+        aspect-ratio: auto;
+        height: 90dvh;
+    }
 }
 
 #contentbody .sociallinks a img {
