--- a/layouts/_shortcodes/webapplink.html
+++ b/layouts/_shortcodes/webapplink.html
@@ -1,3 +1,3 @@
 <p>
-<a href="{{ .Site.BaseURL }}webapps/{{ .Get 0 }}/" target="_blank" rel="noopener noreferrer">View {{ .Get 0 }} in new tab</a>
+<a href="{{ .Site.BaseURL }}webapps/{{ .Get 0 }}" target="_blank" rel="noopener noreferrer">View {{ .Get 0 }} in new tab</a>
 </p>
