--- a/layouts/baseof.html
+++ b/layouts/baseof.html
@@ -1,34 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="{{ .Summary }}">
-<title>{{- block "title" . }}{{ .Title }} | {{ .Site.Title }}{{- end }}</title>
-{{- $style := resources.Get "css/main.css" | fingerprint }}
-<link rel="stylesheet" href="{{ $style.Permalink }}">
-<link rel="shortcut icon" href="{{ .Site.BaseURL }}favicon.jpg" type="image/x-icon">
-{{- $scripts := resources.Get "js/scripts.js" | fingerprint }}
-<script src="{{ $scripts.Permalink }}" defer></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="{{ .Summary | plainify }}">
+  <title>{{ block "title" . }}{{ .Title }} | {{ .Site.Title }}{{ end }}</title>
+  <link rel="icon" href="{{ .Site.BaseURL }}/favicon.jpg">
+  {{ partial "head/css" . }}
+  {{ partial "head/js" . }}
 </head>
 <body>
-<div id="header">
-{{- partial "header.html" . }}
-</div>
-<div id="menubutton"><a href="javascript:void(0)" id="menubutton-link" class="block" onclick="toggleMenu()">Menu</a></div>
-<div id="navbar" class="flex">
-{{- partial "navbar.html" . }}
-</div>
-<div id="main">
-{{- block "main" . }}
-This is where the page content will go.
-{{- end }}
-</div>
-<div id="comments">
-{{- partial "giscus.html" . }}
-</div>
-<div id="footer">
-{{- partial "footer.html" . }}
-</div>
+  <header>
+  <div id="site-title" {{ with .Site.Params.bgimage }}style="--bg-image: url('{{ site.BaseURL }}{{ . }}'"{{ end }}>
+  <h1>{{ .Site.Title }}</h1>
+  </div>
+  {{ partial "menus/main" . }}
+  </header>
+  {{ block "main" . }}
+  {{ end }}
+  <footer>
+  {{- partial "footer" . }}
+  <p class="center">&copy; {{ with .Site.Params.cyear }}{{ . }}{{ end }}-{{ now.Year }} Dilan Gilluly</p>
+  <p class="center">Built with Hugo v{{ hugo.Version }}</p>
+  </footer>
 </body>
 </html>
