--- a/layouts/section.html
+++ b/layouts/section.html
@@ -1,18 +1,19 @@
 {{- define "main" }}
-<div id="contentbody">
+<div id="content-pane">
+<div id="main-content">
 <main>
 <h1>{{ .Title }}</h1>
 {{ .Content }}
-{{- if .Lastmod }}
-<p>Last modified: {{ .Lastmod.Format "Jan 02, 2006 at 03:04PM" }}</p>
-{{- end }}
 </main>
-</div>
-<div id="pagelist" class="g2">
-{{- range .RegularPages.ByTitle }}
-<div class="page-item">
-<a href="{{ .RelPermalink }}" class="block whitelink">{{ .Title }}</a>
-</div>
+{{- $blog_type := slice "blog" "articles" -}}
+{{- if (in $blog_type .Section)}}
+{{- partial "bloglist" . }}
+{{- else }}
+{{- partial "pagelist" . }}
 {{- end }}
+</div>
+<div id="r-sidebar">
+{{- partial "sidebar" . }}
+</div>
 </div>
 {{- end }}
